--- a/Changelog.txt
+++ b/Changelog.txt
@@ -32,6 +32,7 @@ Version 1.4.08-dev
  ! Updated localization files
  ! Changed AxesCritical to CriticalHit in config file
  ! Changed several secondary ability permissions(deprecated versions still exist)
+ ! Changed /ptp config setting, Commands.ptp.Confirm_Required is now Commands.ptp.Accept.Required
  - Removed /stats alias for /mcstats
 
 Version 1.4.07
