--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -420,7 +420,7 @@ Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.Ability.Toggle=Ability use has been toggled for [[YELLOW]]{0}
 Commands.AdminChat.Off=Admin Chat only [[RED]]Off
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
-Commands.AdminToggle=[[RED]]- Toggle admin chat
+Commands.AdminToggle=[[GREEN]]- Toggle admin chat
 Commands.Chat.Console=*Console*
 Commands.Cooldowns.Header=[[GOLD]]--= [[GREEN]]mcMMO Ability Cooldowns[[GOLD]] =--
 Commands.Cooldowns.Row.N=\  [[RED]]{0}[[WHITE]] - [[GOLD]]{1} seconds left
@@ -436,12 +436,12 @@ Commands.Healthbars.Changed.HEARTS=[mcMMO] Your healthbar display type was chang
 Commands.Healthbars.Changed.BAR=[mcMMO] Your healthbar display type was changed to [[YELLOW]]Boxes[[WHITE]].
 Commands.Healthbars.Changed.DISABLED=[mcMMO] Your mob healthbars have been [[GRAY]]disabled[[WHITE]].
 Commands.Healthbars.Invalid=Invalid healthbar type!
-Commands.Inspect=<player> [[RED]]- View detailed player info
+Commands.Inspect=<player> [[GREEN]]- View detailed player info
 Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
-Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
-Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Commands[[RED]][]---
-Commands.mcgod=[[RED]]- Toggle GodMode
+Commands.Leaderboards=<skill> <page> [[GREEN]]- Leaderboards
+Commands.mcc.Header=[[RED]]---[][[GREEN]]mcMMO Commands[[RED]][]---
+Commands.mcgod=[[GREEN]]- Toggle GodMode
 Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
 Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
 Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
@@ -452,7 +452,7 @@ Commands.mcrank.Unranked=[[WHITE]]Unranked
 Commands.mcrefresh.Success=[[RED]]{0}''s cooldowns have been refreshed.
 Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
 Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
-Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
+Commands.mmoedit=[player] <skill> <newvalue> [[GREEN]] - Modify target
 Commands.mmoedit.AllSkills.1=[[GREEN]]Your level in all skills was set to {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
@@ -465,12 +465,12 @@ Commands.mcconvert.Experience.Invalid=[[RED]]Unknown formula type! Valid types a
 Commands.mcconvert.Experience.Same=[[RED]]Already using formula type {0}
 Commands.mcconvert.Experience.Start=[[GRAY]]Starting conversion from {0} to {1} curve
 Commands.mcconvert.Experience.Finish=[[GRAY]]Formula conversion complete; now using {0} XP curve.
-Commands.ModDescription=[[RED]]- Read brief mod description
+Commands.ModDescription=[[GREEN]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
 Commands.Notifications.Off=Ability notifications toggled [[RED]]off
 Commands.Notifications.On=Ability notifications toggled [[GREEN]]on
 Commands.Offline=[[RED]]This command does not work for offline players.
-Commands.Other=[[GREEN]]--OTHER COMMANDS--
+Commands.Other=[[RED]]---[][[GREEN]]OTHER COMMANDS[[RED]][]---
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
 Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: 
@@ -478,13 +478,13 @@ Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
 Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
 Commands.Party.ItemShareCategories=[[DARK_GRAY]]Sharing Items: [[GRAY]][[ITALIC]]{0}
 Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
-Commands.Party.Accept=[[RED]]- Accept party invite
+Commands.Party.Accept=[[GREEN]]- Accept party invite
 Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
-Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
+Commands.Party.Commands=[[RED]]---[][[GREEN]]PARTY COMMANDS[[RED]][]---
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
-Commands.Party.Invite=[[RED]]- Send party invite
+Commands.Party.Invite=[[GREEN]]- Send party invite
 Commands.Party.Join=[[GRAY]]Joined Party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
@@ -495,11 +495,11 @@ Commands.Party.Kick=[[RED]]You were kicked from party {0}!
 Commands.Party.Leave=[[RED]]You have left that party
 Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
 Commands.Party.None=[[RED]]You are not in a party.
-Commands.Party.Quit=[[RED]]- Leave your current party
-Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
-Commands.Party.Toggle=[[RED]]- Toggle Party Chat
-Commands.Party1=[[RED]]- Create a new party
-Commands.Party2=[[RED]]- Join a players party
+Commands.Party.Quit=[[GREEN]]- Leave your current party
+Commands.Party.Teleport=[[GREEN]]- Teleport to party member
+Commands.Party.Toggle=[[GREEN]]- Toggle Party Chat
+Commands.Party1=[[GREEN]]- Create a new party
+Commands.Party2=[[GREEN]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
@@ -514,7 +514,7 @@ Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX
 Commands.PowerLevel=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0}
 Commands.Reset.All=[[GREEN]]All of your skill levels have been reset successfully.
 Commands.Reset.Single=[[GREEN]]Your {0} skill level has been reset successfully.
-Commands.Reset=[[RED]]Reset a skill's level to 0
+Commands.Reset=[[GREEN]]- Reset a skill's level to 0
 Commands.Scoreboard.Clear=[[DARK_AQUA]]mcMMO scoreboard cleared.
 Commands.Scoreboard.NoBoard=[[RED]]The mcMMO scoreboard is not active.
 Commands.Scoreboard.Keep=[[DARK_AQUA]]The mcMMO scoreboard will stay up until you use [[GREEN]]/mcscoreboard clear[[DARK_AQUA]].
@@ -527,10 +527,10 @@ Commands.Scoreboard.Tip.Keep=[[GOLD]]Tip: Use [[RED]]/mcscoreboard keep[[GOLD]] 
 Commands.Scoreboard.Tip.Clear=[[GOLD]]Tip: Use [[RED]]/mcscoreboard clear[[GOLD]] to get rid of the scoreboard.
 Commands.Skill.Invalid=[[RED]]That is not a valid skillname!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Leaderboard--
-Commands.SkillInfo=[[RED]]- View detailed information about a skill
+Commands.SkillInfo=[[GREEN]]- View detailed information about a skill
 Commands.Stats.Self=YOUR STATS
-Commands.Stats=[[RED]]- View your mcMMO stats
-Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
+Commands.Stats=[[GREEN]]- View your mcMMO stats
+Commands.ToggleAbility=[[GREEN]]- Toggle ability activation with right click
 Commands.Usage.0=[[RED]]Proper usage is /{0}
 Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
 Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
