--- a/Changelog.txt
+++ b/Changelog.txt
@@ -36,6 +36,7 @@ Version 1.4.08-dev
  ! Changed AxesCritical to CriticalHit in config file
  ! Changed several secondary ability permissions(deprecated versions still exist)
  ! Changed /ptp config setting, Commands.ptp.Confirm_Required is now Commands.ptp.Accept.Required
+ ! Changed config validation for UnlockLevels, they can now also be 0
  - Removed /stats alias for /mcstats
 
 Version 1.4.07
