--- a/Changelog.txt
+++ b/Changelog.txt
@@ -33,6 +33,7 @@ Version 1.4.08-dev
  = Fixed bug where the /ptp request expiration time was checked wrongly - preventing players from using the command
  = Fixed bug where Hylian Luck was broken
  ! Changed party system. Parties now have XP and Levels. Party features such as party teleport and party chat have to be unlocked before they can be used by the party members
+ ! Changed appearance of party member list. Gold = party leader, White = online, Gray = offline, Italic = not nearby
  ! Updated localization files
  ! Changed the appearance of /mcmmo commands
  ! Changed AxesCritical to CriticalHit in config file
