--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ Version 1.4.08-dev
  + Added bypass permission for finding Fishing traps
  + Added level threshold settings to hardcore modes. When a players skill level is below this threshold, they will not lose any stats
  + Added party alliances, two parties can now team up. Allies share party chat and cannot harm each other.
+ + Added new experience bonus perk 'mcmmo.perks.xp.10percentboost.<skillname>', gives +10% experience
  = Fixed bug where LeafBlower permissions were ignored
  = Fixed bug with toggle commands not properly displaying the success message.
  = Fixed IllegalArgumentException caused by an empty Fishing treasure category
