--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ Version 1.4.08-dev
  + Added level threshold settings to hardcore modes. When a players skill level is below this threshold, they will not lose any stats
  + Added party alliances, two parties can now team up. Allies share party chat and cannot harm each other.
  + Added new experience bonus perk 'mcmmo.perks.xp.10percentboost.<skillname>', gives +10% experience
+ + Added new experience bonus perk 'mcmmo.perks.xp.customboost.<skillname>' multiplies incoming XP by the boost amount defined in the experience config
  = Fixed bug where LeafBlower permissions were ignored
  = Fixed bug with toggle commands not properly displaying the success message.
  = Fixed IllegalArgumentException caused by an empty Fishing treasure category
