--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ Version 1.4.08-dev
  + Added party alliances, two parties can now team up. Allies share party chat and cannot harm each other.
  + Added new experience bonus perk 'mcmmo.perks.xp.10percentboost.<skillname>' multiplies incoming XP by 1.1
  + Added new experience bonus perk 'mcmmo.perks.xp.customboost.<skillname>' multiplies incoming XP by the boost amount defined in the experience config
+ + Added Ender Dragon, Wither, and Witch to combat experience multipliers - they do not give XP by default
  = Fixed bug where LeafBlower permissions were ignored
  = Fixed bug with toggle commands not properly displaying the success message.
  = Fixed IllegalArgumentException caused by an empty Fishing treasure category
