Clean up some of our messes.

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -4,7 +4,7 @@ Acrobatics.DodgeChance=[[RED]]\u0160ance na \u00faskok: [[YELLOW]]{0}
 Acrobatics.Effect.0=Valeni
 Acrobatics.Effect.1=Redukuje nebo ru\u0161\u00ed zran\u011bn\u00ed zp\u016fsoben\u00e9 p\u00e1dem
 Acrobatics.Effect.2=\u0160\u0165astn\u00fd kotoul
-Acrobatics.Effect.3=Dvojt\u00e1 effectivita ne\u017e norm\u00e1ln\u00ed 
+Acrobatics.Effect.3=Dvojt\u00e1 effectivita ne\u017e norm\u00e1ln\u00ed
 Acrobatics.Effect.4=\u00dahyb
 Acrobatics.Effect.5=Sn\u00ed\u017een\u00e9 zran\u011bn\u00ed o polovinu
 Acrobatics.Listener=Akrobacie:
@@ -39,7 +39,7 @@ Axes.Combat.CriticalHit=[[RED]]KRITICK\u00dd Z\u00c1SAH!
 Axes.Combat.GI.Proc=[[GREEN]]**\u00daDER VELKOU SILOU**
 Axes.Combat.GI.Struck=[[RED]]**ZASAZENI S VYSSIM UCINKEM**
 Axes.Combat.SS.Length=[[RED]]Delka trvani Drtice lebek: [[YELLOW]]{0}s
-Axes.Effect.0=[[GREEN]]**Drtic lebek byl AKTIVOVAN**\n
+Axes.Effect.0=[[GREEN]]**Drtic lebek byl AKTIVOVAN**
 Axes.Effect.1=Ud\u011bl AoE zran\u011bn\u00ed
 Axes.Effect.2=Kriticky zasah
 Axes.Effect.3=Dvojite zraneni
@@ -443,8 +443,8 @@ Commands.Stats.Self=Tvoje statistiky
 Commands.Stats=[[RED]]- Shl\u00e9dnout svoje mcMMO statistiky
 Commands.ToggleAbility=[[RED]]- Aktivace schopnosti prav\u00fdm tla\u010d\u00edtkem.
 Commands.Usage.0=[[RED]]Spr\u00e1vn\u00e9 pou\u017eit\u00ed je /{0}
-Commands.Usage.1=[[RED]]Spr\u00e1vn\u00e9 pou\u017eit\u00ed je /{0} {1} 
-Commands.Usage.2=[[RED]]Spr\u00e1vn\u00e9 pou\u017eit\u00ed je /{0} {1} {2} 
+Commands.Usage.1=[[RED]]Spr\u00e1vn\u00e9 pou\u017eit\u00ed je /{0} {1}
+Commands.Usage.2=[[RED]]Spr\u00e1vn\u00e9 pou\u017eit\u00ed je /{0} {1} {2}
 Commands.Usage.3=[[RED]]Spr\u00e1vn\u00e9 pou\u017eit\u00ed je /{0} {1} {2} {3}
 Commands.Usage.Level=\u00darove\u0148
 Commands.Usage.Message=zprava
