Add option to drop extra fish
Allows enabling of old fishing mechanic where fish was always caught,
even when a treasure was found

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,8 @@ Key:
   ! Change
   - Removal
 
+Version 1.5.00-dev
+
 Version 1.4.08
  + Added a new skill; Alchemy. Special thanks to EasyMFnE for creating this!
  + Added SecondaryAbilityType enum, and new SecondaryAbilityWeightedActivationCheckEvent, fired when a secondary ability checkes its activation chances
