--- a/Changelog.txt
+++ b/Changelog.txt
@@ -50,6 +50,7 @@ Version 1.4.08-dev
  ! Changed /ptp config setting, Commands.ptp.Confirm_Required is now Commands.ptp.Accept.Required
  ! Changed config validation for UnlockLevels, they can now also be 0
  ! Changed config validation for Rank_Levels, successive Ranks can now be less than or equal to each other
+ ! Changed default amount of XP gained from mining Quartz Ore. From 250 to 100 XP.
  - Removed /stats alias for /mcstats
 
 Version 1.4.07
