--- a/Changelog.txt
+++ b/Changelog.txt
@@ -39,6 +39,7 @@ Version 1.4.08-dev
  = Fixed bug where party chat broke if the display name contained special characters
  = Fixed bug where `/addlevels all` and `/skillreset all` didn't work
  = Fixed bug which made it possible to gain XP by taming the same horse multiple times, if a player "untamed" that horse
+ = Fixed bug where some horses summoned with "Call of the Wild" were unable to jump
  = Fixed bug where the /ptp request expiration time was checked wrongly - preventing players from using the command
  = Fixed bug where Hylian Luck was broken
  = Fixed bug where Snow would never drop treasures
