--- a/Changelog.txt
+++ b/Changelog.txt
@@ -22,6 +22,7 @@ Version 1.4.08-dev
  + Added Ender Dragon, Wither, and Witch to combat experience multipliers - they do not give XP by default
  + Added support for multiple mod config files, naming can be done as either armor.<modname>.yml or <modname>.armor.yml
  + Added config options to configure the items used in "Call of the Wild"
+ + Added config option to configure the database command cooldown
  = Fixed bug where healthbars wouldn't display if skills were disabled
  = Fixed bug with "Call of the Wild" entities despawning
  = Fixed bug with updating (very) old user data.
