--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,7 @@ Key:
   ! Change
   - Removal
 
-Version 1.5.00-dev
+Version 1.5.00
  + Added Podzol & Red Sand to Excavation
  + Added Hardened Clay, Stained Clay, and Packed Ice to Mining blocks
  + Added Acacia and Dark Oak to Woodcutting blocks
