--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,8 @@ Key:
   ! Change
   - Removal
 
+Version 1.5.01-dev
+
 Version 1.5.00
  + Added Podzol & Red Sand to Excavation
  + Added Hardened Clay, Stained Clay, and Packed Ice to Mining blocks
