--- a/Changelog.txt
+++ b/Changelog.txt
@@ -29,6 +29,7 @@ Version 1.5.01-dev
  = Fixed bug which would cause a NullPointerException with getFlowerAndGrassXp()
  = Fixed bug which could cause and SQLException regarding the connection property 'maxReconnects'.
  = Fixed bug where falling blocks were incorrectly tracked
+ = Fixed bug where items would get deleted when in Berserk with a full inventory
  ! Changed SecondaryAbilityEvent to implement Cancellable and it now gets fired for damage related secondary abilities
  ! Changed the way mcMMO handles bonus damage, updated for the new damage event API
  ! Changed player data saving. Save tasks are now asynchronous
