--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ Key:
 Version 1.5.01-dev
  + Added support for `MATERIAL|data` format in treasures.yml
  = Fixed bug where the Updater was running on the main thread.
+ = Fixed bug when players would use /ptp without being in a party
  ! Vanished players no longer get hit by AoE effects
 
 Version 1.5.00
