--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 1.5.01-dev
  + Added new feature to Herbalism. Instantly-regrown crops are protected from being broken for 1 second
  + Added option to config.yml to show the /mcstats scoreboard automatically after logging in
  + Added support for `MATERIAL|data` format in treasures.yml
+ + Added API to experience events to get XP gain reason
  = Fixed bug where the Updater was running on the main thread.
  = Fixed bug when players would use /ptp without being in a party
  = Fixed bug where player didn't have a mcMMOPlayer object in AsyncPlayerChatEvent
