--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ Version 1.5.01-dev
  = Fixed bug when players would use /ptp without being in a party
  = Fixed bug where player didn't have a mcMMOPlayer object in AsyncPlayerChatEvent
  = Fixed bug where dodge would check the wrong player skill level
+ = Fixed bug which causes /party teleport to stop working
  ! Vanished players no longer get hit by AoE effects
 
 Version 1.5.00
