--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ Version 1.5.01-dev
  + Added option to config.yml for Alchemy. Skills.Alchemy.Prevent_Hopper_Transfer_Bottles
  + Added support for `MATERIAL|data` format in treasures.yml
  + Added API to experience events to get XP gain reason
+ + Added API to check if an entity is bleeding
  = Fixed bug where the Updater was running on the main thread.
  = Fixed bug when players would use /ptp without being in a party
  = Fixed bug where player didn't have a mcMMOPlayer object in AsyncPlayerChatEvent
