--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,6 +20,8 @@ Version 1.5.01-dev
  = Fixed bug where player didn't have a mcMMOPlayer object in AsyncPlayerChatEvent
  = Fixed bug where dodge would check the wrong player skill level
  = Fixed bug which causes /party teleport to stop working
+ = Fixed bug where SaveTimerTask would produce an IndexOutOfBoundsException
+ ! Changed player data saving. Save tasks are now asynchronous
  ! Vanished players no longer get hit by AoE effects
  ! Changed Alchemy config option 'Prevent_Hopper_Transfer' renamed to 'Prevent_Hopper_Transfer_Ingredients'
  - Removed salvage ability from Repair, salvage has it's own (child) skill now
