--- a/Changelog.txt
+++ b/Changelog.txt
@@ -31,6 +31,7 @@ Version 1.5.01-dev
  ! Vanished players no longer get hit by AoE effects
  ! Changed Alchemy config option 'Prevent_Hopper_Transfer' renamed to 'Prevent_Hopper_Transfer_Ingredients'
  ! Changed Alchemy XP distribution. XP is granted based on the stage of the potion.
+ ! Updated for new getOnlinePlayers() behavior
  - Removed salvage ability from Repair, salvage has it's own (child) skill now
 
 Version 1.5.00
