--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ Version 1.5.01-dev
  + Added API to check if an entity is bleeding
  + Added options to tools.yml and armor.yml config files to set a pretty repair material name
  + Added full support for repairables in tools.yml and armor.yml config files
+ + Added new API class SkillAPI used to get a list of valid skill names
  = Fixed bug where pistons would mess with the block tracking
  = Fixed bug where the Updater was running on the main thread.
  = Fixed bug when players would use /ptp without being in a party
