--- a/Changelog.txt
+++ b/Changelog.txt
@@ -34,12 +34,14 @@ Version 1.5.01-dev
  = Fixed bug where the console would not correctly show party chat colors
  = Fixed bug where party chat was using non thread safe methods
  = Fixed bug where Blast Mining unlock levels could be to high in certain occasions
+ = Fixed bug where Blast Minings ability "Demolition Expert" would not work
  ! Changed SecondaryAbilityEvent to implement Cancellable and it now gets fired for damage related secondary abilities
  ! Changed the way mcMMO handles bonus damage, updated for the new damage event API
  ! Changed player data saving. Save tasks are now asynchronous
  ! Vanished players no longer get hit by AoE effects
  ! Changed Alchemy config option 'Prevent_Hopper_Transfer' renamed to 'Prevent_Hopper_Transfer_Ingredients'
  ! Changed Alchemy XP distribution. XP is granted based on the stage of the potion.
+ ! Changed behavior of the Blast Mining ability "Demolition Expert"; now only decreases damage for the ability user
  ! Updated for new getOnlinePlayers() behavior
  - Removed salvage ability from Repair, salvage has it's own (child) skill now
 
